Added .venv/README.md with directions for how to use the .venv directory as a python3 virtualenv.
Solved the lonely integer problem.

Updated naming convention, testing -> test.

Customized pyproject.toml for problems.

--- a/problems/pytest.ini
+++ b/problems/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 # should be tests
-testpaths = testing doc
+testpaths = test doc
 python_functions = *_test
 python_files = test_*.py check_*.py example_*.py
 # not working
