--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,18 +2,17 @@
 [tool.poetry]
 name = "problems"
 version = "0.1.1"
-description = "xonsh community environment similar to bash-it"
+description = "examples problems done in several programming languages"
 authors = ["Mike Carifio <mike@carif.io>"]
 license = "MIT"
 readme = "problems/README.md"
-homepage = "https://www.github.com/mcarifio/xonsh-it"
+homepage = "https://www.github.com/mcarifio/problems"
 include = "doc"
 # exclude
 
 [tool.poetry.dependencies]
 python = "^3.7"
 # cleo?
-fusepy = "^3.0.1"
 poetry = "^0.12.11"
 prompt_toolkit = "^2.0"
 fire = "^0.1.3"
@@ -51,7 +50,7 @@ echo = "problems.runner:echo"
 # say just demonstrates a different entry point
 say = "problems.runner:say"
 
-testing = "problems.runner:testing"
+test = "problems.runner:test"
 
 # To use a local pypiserver, swithch the definition next and uncomment out [tool.poetry.source] array item.
 # pypiserver = "pyproject.bin.pypiserver:run"
